<resources>
    <string name="app_name">GithubUser</string>
    <string name="search_hint">Masukkan Username</string>
    <string name="username_detail_user">Username</string>
    <string name="full_name_detail_user">Fullname</string>
    <string name="following_detail_user">Following</string>
    <string name="followers_detail_user">Followers</string>
    <string name="name">Nama User</string>
    <string name="user_number_following">%d following</string>
    <string name="user_number_followers">%d followers</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_to_favorite">ADD TO FAVORITE</string>
    <string name="add">Add Favorite</string>
    <string name="delete_from_favorite">telah dihapus dari favorite</string>
    <string name="insert_into_favorite">telah ditambahkan ke favorite</string>
    <string name="undo">Batalkan</string>
    <string name="check_favorite">Lihat</string>
    <string name="dark_mode">Dark Mode</string>
</resources>